---
source: tests/complex_control_flow.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string.4 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  br label %loop_body

loop_body:                                        ; preds = %entry, %add_merge
  %payload_to_f64101 = phi double [ 0.000000e+00, %entry ], [ %payload_to_f64, %add_merge ]
  %signed_payload100 = phi i64 [ 0, %entry ], [ %signed_payload, %add_merge ]
  %cmptmp23 = icmp slt i64 %signed_payload100, 3
  br i1 %cmptmp23, label %print_int, label %else

loop_exit:                                        ; preds = %add_merge
  ret i32 0

else:                                             ; preds = %loop_body
  %cmptmp48 = icmp ult i64 %signed_payload100, 7
  br i1 %cmptmp48, label %print_int66, label %print_int74

print_int:                                        ; preds = %loop_body
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.4, i64 1)
  br label %add_merge

print_int66:                                      ; preds = %else
  %printf_int70 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.4, i64 2)
  br label %add_merge

print_int74:                                      ; preds = %else
  %printf_int78 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.4, i64 3)
  br label %add_merge

add_merge:                                        ; preds = %print_int66, %print_int74, %print_int
  %addtmp = fadd double %payload_to_f64101, 1.000000e+00
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %is_negative.not = icmp ult i64 %payload_masked, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %payload_masked
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %cmptmp = icmp slt i64 %signed_payload, 10
  br i1 %cmptmp, label %loop_body, label %loop_exit
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
